# drf-auth

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
light/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
light/migrations/: 0001_initial.py
lights_project/: asgi.py  settings.py  urls.py  wsgi.py
